--- a/grails-app/assets/stylesheets/application.css
+++ b/grails-app/assets/stylesheets/application.css
@@ -1,8 +1,49 @@
-#loading-spinner {
-    position: fixed !important;
+.overlay {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    background: black;
+    opacity: 0.5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     z-index: 9999;
+}
+
+.loader {
+    border: 4px solid red;
+    border-top: 4px solid black;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    opacity: 1!important;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0%{transform: rotate(0deg)}
+    100%{transform: rotate(360deg)}
+}
+
+.loading-message {
+    color: red;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.header-section {
+    background-color: #fffcf5;
+}
+
+.header-page {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: unset;
+}
+
+.main-content {
+    width: 1200px;
 }
